# ipxact

./: CMakeLists.txt  Number.cpp  README.md  Register.cpp  main.cpp  regular_expressions.cpp
includes/: APESimulatorWriter.hpp  ASMSymbols.hpp  ASMWriter.hpp  HeaderWriter.hpp  IPXACTReader.hpp  IPXACTWriter.hpp  LaTeXWriter.hpp  Number.hpp  Reader.hpp  Register.hpp  SimulatorWriter.hpp  Writer.hpp  XHTMLReader.hpp  main.hpp  regular_expressions.hpp
libs/: CMakeLists.txt
libs/OptParse/: CMakeLists.txt
libs/pcre2/: pcre2_policy.patch
reader/: IPXACTReader.cpp  ReaderFactory.cpp  XHTMLReader.cpp
resources/: ASMHeader.s  ASMSymbols.s  CMakeLists.txt  HeaderWriter.h  SimulatorOutput.cpp  SimulatorOutput_ape.cpp  SimulatorOutput_mmap.cpp
writer/: APESimulatorWriter.cpp  ASMSymbols.cpp  ASMWriter.cpp  HeaderWriter.cpp  IPXACTWriter.cpp  LaTeXWriter.cpp  SimulatorWriter.cpp  WriterFactory.cpp
